--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "draft-js": "^0.11.7",
     "echarts": "^5.3.0",
     "echarts-for-react": "^3.0.2",
+    "i18next": "^21.6.14",
     "material-ui-dropzone": "^3.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.5.1",
+    "react-i18next": "^11.16.1",
     "react-json-view": "^1.21.3",
     "react-markdown": "^8.0.0",
     "react-router-dom": "^6.2.1",
