--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.2.5",
+    "@mui/lab": "^5.0.0-alpha.75",
     "@mui/material": "^5.2.6",
     "axios": "^0.25.0",
     "axios-hooks": "^3.0.0",
