--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "@types/draft-js": "^0.11.9",
+    "@types/minio": "^7.0.12",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@types/react-syntax-highlighter": "^13.5.2",
