--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@draft-js-plugins/linkify": "^4.2.0",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@monaco-editor/react": "^4.4.1",
     "@mui/icons-material": "^5.2.5",
     "@mui/lab": "^5.0.0-alpha.75",
     "@mui/material": "^5.2.6",
@@ -22,6 +23,7 @@
     "echarts-for-react": "^3.0.2",
     "i18next": "^21.6.14",
     "material-ui-dropzone": "^3.5.0",
+    "mime-types": "^2.1.35",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.5.1",
@@ -31,10 +33,12 @@
     "react-router-dom": "^6.2.1",
     "react-syntax-highlighter": "^15.4.5",
     "rehype-highlight": "^5.0.2",
-    "remark-gfm": "^3.0.1"
+    "remark-gfm": "^3.0.1",
+    "stream": "0.0.2"
   },
   "devDependencies": {
     "@types/draft-js": "^0.11.9",
+    "@types/mime-types": "^2.1.1",
     "@types/minio": "^7.0.12",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
