add remote folder

--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "echarts-for-react": "^3.0.2",
     "i18next": "^21.6.14",
     "material-ui-dropzone": "^3.5.0",
+    "mime": "^3.0.0",
     "mime-types": "^2.1.35",
+    "monaco-editor": "^0.33.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-dropzone": "^11.5.1",
+    "react-dropzone": "^11.7.1",
     "react-i18next": "^11.16.1",
     "react-json-view": "^1.21.3",
     "react-markdown": "^8.0.0",
@@ -38,6 +40,7 @@
   },
   "devDependencies": {
     "@types/draft-js": "^0.11.9",
+    "@types/mime": "^2.0.3",
     "@types/mime-types": "^2.1.1",
     "@types/minio": "^7.0.12",
     "@types/react": "^17.0.33",
