--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^5.2.6",
     "axios": "^0.25.0",
     "axios-hooks": "^3.0.1",
+    "crypto-js": "^4.1.1",
     "draft-js": "^0.11.7",
     "echarts": "^5.3.0",
     "echarts-for-react": "^3.0.2",
@@ -40,6 +41,7 @@
     "stream": "0.0.2"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.1.1",
     "@types/draft-js": "^0.11.9",
     "@types/mime": "^2.0.3",
     "@types/mime-types": "^2.1.1",
