--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mime": "^3.0.0",
     "mime-types": "^2.1.35",
     "monaco-editor": "^0.33.0",
+    "notistack": "^2.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.7.1",
@@ -38,7 +39,8 @@
     "react-syntax-highlighter": "^15.4.5",
     "rehype-highlight": "^5.0.2",
     "remark-gfm": "^3.0.1",
-    "stream": "0.0.2"
+    "stream": "0.0.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/crypto-js": "^4.1.1",
@@ -49,6 +51,7 @@
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@types/react-syntax-highlighter": "^13.5.2",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
     "@vitejs/plugin-react": "^1.0.7",
