--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "mime-types": "^2.1.35",
     "monaco-editor": "^0.33.0",
     "notistack": "^2.0.3",
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.7.1",
