--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "material-ui-dropzone": "^3.5.0",
     "mime": "^3.0.0",
     "mime-types": "^2.1.35",
+    "minio": "^7.0.26",
     "monaco-editor": "^0.33.0",
     "notistack": "^2.0.3",
     "path-browserify": "^1.0.1",
