--- a/.env-simple
+++ b/.env-simple
@@ -7,3 +7,4 @@ VITE_APP_S3_PORT=9000
 VITE_APP_S3_BUCKET=public
 VITE_APP_S3_ACCESS_KEY=aaaaaaaa
 VITE_APP_S3_SECRET_KEY=aaaaaaaa
+VITE_APP_S3_USE_SSL=false
