--- a/package.json
+++ b/package.json
@@ -19,15 +19,20 @@
     "@mui/material": "^5.2.6",
     "axios": "^0.25.0",
     "axios-hooks": "^3.0.1",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
     "crypto-js": "^4.1.1",
     "draft-js": "^0.11.7",
     "echarts": "^5.3.0",
     "echarts-for-react": "^3.0.2",
+    "events": "^3.3.0",
+    "http-browserify": "^1.7.0",
+    "https-browserify": "^1.0.0",
     "i18next": "^21.6.14",
     "material-ui-dropzone": "^3.5.0",
     "mime": "^3.0.0",
     "mime-types": "^2.1.35",
-    "minio": "^7.0.26",
+    "minio": "^7.0.27",
     "monaco-editor": "^0.33.0",
     "notistack": "^2.0.3",
     "path-browserify": "^1.0.1",
@@ -43,6 +48,7 @@
     "rehype-highlight": "^5.0.2",
     "remark-gfm": "^3.0.1",
     "stream": "0.0.2",
+    "stream-browserify": "^3.0.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
