move minto to become a lib

--- a/.eslintignore
+++ b/.eslintignore
@@ -1,2 +1,3 @@
 # https://stackoverflow.com/questions/58510287/parseroptions-project-has-been-set-for-typescript-eslint-parser
 /public
+/src/external/minio.js
