--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "echarts": "^5.3.0",
     "echarts-for-react": "^3.0.2",
     "i18next": "^21.6.14",
+    "kn-blog-minio-sdk": "^0.0.1",
     "material-ui-dropzone": "^3.5.0",
     "mime": "^3.0.0",
     "mime-types": "^2.1.35",
