--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,5 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
-  "include": ["./src"],
-  "exclude": ["./src/external/minio.js"],
+  "include": ["./src"]
 }
