--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@fingerprintjs/fingerprintjs": "^3.3.3",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
     "@monaco-editor/react": "^4.4.1",
     "@mui/icons-material": "^5.2.5",
     "@mui/material": "^5.2.6",
@@ -67,6 +71,7 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "typescript": "^4.4.4",
     "vite": "^2.7.2",
+    "vite-plugin-chunk-split": "^0.2.2",
     "vite-plugin-rewrite-all": "^0.1.2"
   }
 }
