--- a/package.json
+++ b/package.json
@@ -38,10 +38,12 @@
     "process": "^0.11.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-draggable": "^4.4.5",
     "react-dropzone": "^11.7.1",
     "react-i18next": "^11.16.1",
     "react-json-view": "^1.21.3",
     "react-markdown": "^8.0.2",
+    "react-resizable": "^3.0.4",
     "react-router-dom": "^6.2.1",
     "react-syntax-highlighter": "^15.5.0",
     "rehype-highlight": "^5.0.2",
@@ -56,6 +58,7 @@
     "@types/minio": "^7.0.12",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
+    "@types/react-resizable": "^1.7.4",
     "@types/react-syntax-highlighter": "^13.5.2",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
